--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ license = "AGPL-3.0-or-later"
 [tool.poetry.dependencies]
 python = "^3.9"
 parallel-ssh = "^2.6.0"
+flake8-bugbear = "^21.9.2"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^3.9.2"
