docs: Follow Conventional Commits

--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -31,7 +31,7 @@ jobs:
           git config user.name "GitHub Actions"
           git config user.email "action@github.com"
           if output=$(git status --porcelain) && [ ! -z "$output" ]; then
-            git commit -m "ci: Automatic code formatting" -a
+            git commit -m "style: Automatic code formatting" -a
             git push
           fi
 
