--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -8,6 +8,7 @@ on:
 
 jobs:
   format:
+    runs-on: ubuntu-latest
     strategy:
       matrix:
         python-version: [3.9]
@@ -36,6 +37,7 @@ jobs:
           fi
 
   test:
+    runs-on: ubuntu-latest
     strategy:
       matrix:
         python-version: [3.8, 3.9]
