--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,37 @@
+# python: compiler cache
 __pycache__
+
+# python: testing and checking
+.mypy_cache
+.pytest_cache
+
+# nodejs: dependencies
+/ui/node_modules
+
+# nodejs: testing
+/ui/coverage
+
+# nodejs: next.js
+/ui/.next/
+/ui/out/
+
+# nodejs: production
+/ui/build
+
+# nodejs: debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# nodejs: vercel
+.vercel
+
+# nodejs: local env files
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# misc
+.DS_Store
+*.pem
