--- a/.github/workflows/markdown.yml
+++ b/.github/workflows/markdown.yml
@@ -1,4 +1,4 @@
-name: nodejs
+name: markdown
 
 on:
   push:
@@ -6,7 +6,7 @@ on:
   pull_request:
     branches: [ main ]
     paths:
-      - 'ui/**'
+      - '**.md'
 
 jobs:
   format:
@@ -14,8 +14,6 @@ jobs:
     strategy:
       matrix:
         node-version: [14.x]
-    defaults:
-      working-directory: ui
 
     steps:
       - uses: actions/checkout@v2
@@ -27,10 +25,10 @@ jobs:
           node-version: ${{ matrix.node-version }}
           cache: 'npm'
           cache-dependency-path: package-lock.json
-      - name: Install dependencies
-        run: npm ci
+      - name: Install prettier
+        run: npm install --no-save prettier@2
       - name: Format
-        run: npm run format --if-present
+        run: npx prettier --write '**/*.md'
       - name: Commit changes if any
         run: |
           git config user.name "GitHub Actions"
@@ -39,31 +37,6 @@ jobs:
             git commit -m "style: Automatic code formatting" -a
             git push
           fi
-
-  test:
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version: [14.x]
-    defaults:
-      working-directory: ui
-
-    steps:
-      - uses: actions/checkout@v2
-        with:
-          ref: ${{ github.head_ref }}
-      - name: Set up Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v2
-        with:
-          node-version: ${{ matrix.node-version }}
-          cache: 'npm'
-          cache-dependency-path: package-lock.json
-      - name: Install dependencies
-        run: npm ci
-      - name: Type-check
-        run: npm run type-check --if-present
-      - name: Lint
-        run: npm run lint --if-present
 
 
 # vim: set et ts=2 sw=2:
