--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -5,6 +5,10 @@ on:
     branches: [ main ]
   pull_request:
     branches: [ main ]
+    paths:
+      - 'fact/**'
+      - 'test/**'
+      - 'proto/**'
 
 jobs:
   format:
