--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,10 +22,14 @@ grpcio-tools = "^1.41.0"
 # Type stubs
 mypy-protobuf = "^2.10"
 grpc-stubs = "^1.24.7"
+SQLAlchemy = {extras = ["mypy"], version = "^1.4.25"}
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.mypy]
+plugins = ["sqlalchemy.ext.mypy.plugin"]
 
 [[tool.mypy.overrides]]
 module = ["grpc.aio"]
