--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -72,7 +72,7 @@ jobs:
       - name: Install dependencies
         run: poetry install --no-interaction --no-root
       - name: Lint with flake8
-        run: poetry run flake8 .
+        run: poetry run flake8
       - name: Type-check with mypy
         run: poetry run mypy .
       - name: Test with pytest
