--- a/ui/package.json
+++ b/ui/package.json
@@ -11,11 +11,14 @@
     "format": "xo --fix; prettier --write **/*.css *.json"
   },
   "dependencies": {
+    "@improbable-eng/grpc-web": "^0.14.1",
     "debug": "^4.3.2",
     "next": "11.1.2",
     "react": "17.0.2",
     "react-bootstrap": "^2.0.0-rc.0",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "rxjs": "^6.6.7",
+    "ts-proto": "^1.83.1"
   },
   "devDependencies": {
     "@types/react": "17.0.26",
@@ -27,7 +30,8 @@
   },
   "xo": {
     "ignores": [
-      "next-env.d.ts"
+      "next-env.d.ts",
+      "proto/**/*.ts"
     ],
     "extends": [
       "xo-react",
