--- a/ui/package.json
+++ b/ui/package.json
@@ -7,11 +7,12 @@
     "build": "next build",
     "start": "next start",
     "type-check": "tsc --pretty --noEmit",
-    "lint": "xo && prettier --check **/*.css *.json",
-    "format": "xo --fix; prettier --write **/*.css *.json"
+    "lint": "xo && prettier --check **/*.scss **/*.css *.json",
+    "format": "xo --fix; prettier --write **/*.scss **/*.css *.json"
   },
   "dependencies": {
     "@improbable-eng/grpc-web": "^0.14.1",
+    "@improbable-eng/grpc-web-node-http-transport": "^0.14.1",
     "debug": "^4.3.2",
     "next": "11.1.2",
     "react": "17.0.2",
@@ -22,15 +23,18 @@
   },
   "devDependencies": {
     "@types/react": "17.0.26",
+    "bootstrap": "^5.1.3",
     "eslint-config-next": "11.1.2",
     "eslint-config-xo-react": "^0.25.0",
     "prettier": "^2.4.1",
+    "sass": "^1.43.2",
     "typescript": "4.4.3",
     "xo": "^0.45.0"
   },
   "xo": {
     "ignores": [
       "next-env.d.ts",
+      "next-env-custom.d.ts",
       "proto/**/*.ts"
     ],
     "extends": [
@@ -38,8 +42,9 @@
       "next"
     ],
     "rules": {
-      "sort-imports": "error",
-      "react/react-in-jsx-scope": "off"
+      "react/react-in-jsx-scope": "off",
+      "unicorn/prefer-node-protocol": "off",
+      "new-cap": "off"
     },
     "overrides": [
       {
