--- a/ui/package.json
+++ b/ui/package.json
@@ -19,10 +19,12 @@
     "react-bootstrap": "^2.0.0-rc.0",
     "react-dom": "17.0.2",
     "rxjs": "^6.6.7",
-    "ts-proto": "^1.83.1"
+    "ts-proto": "^1.83.1",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/react": "17.0.26",
+    "@types/uuid": "^8.3.1",
     "bootstrap": "^5.1.3",
     "eslint-config-next": "11.1.2",
     "eslint-config-xo-react": "^0.25.0",
