--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ mypy-protobuf = "^2.10"
 types-protobuf = "^3.18.0"
 grpc-stubs = "^1.24.7"
 SQLAlchemy = {extras = ["mypy"], version = "^1.4.25"}
+aiosqlite = "^0.17.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
