--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.9"
 parallel-ssh = "^2.6.0"
 grpcio = "^1.41.0"
 SQLAlchemy = "^1.4.25"
+pytest-asyncio = "^0.16.0"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^3.9.2"
