--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ types-protobuf = "^3.18.0"
 grpc-stubs = "^1.24.7"
 SQLAlchemy = {extras = ["mypy"], version = "^1.4.25"}
 aiosqlite = "^0.17.0"
+pytest-asyncio = "^0.16.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
