feat: Switch to Next.js 12 (#28)
* feat: Switch to Next.js 12

* style: Automatic code formatting

Co-authored-by: GitHub Actions <action@github.com>

--- a/ui/tsconfig.json
+++ b/ui/tsconfig.json
@@ -7,6 +7,7 @@
     "strict": true,
     "downlevelIteration": true,
     "forceConsistentCasingInFileNames": true,
+    "incremental": true,
     "noEmit": true,
     "esModuleInterop": true,
     "module": "esnext",
