--- a/ui/package.json
+++ b/ui/package.json
@@ -15,6 +15,7 @@
     "@improbable-eng/grpc-web-node-http-transport": "^0.14.1",
     "clsx": "^1.1.1",
     "debug": "^4.3.2",
+    "filesize": "^8.0.5",
     "next": "12.0.0",
     "react": "17.0.2",
     "react-bootstrap": "^2.0.0-rc.0",
