--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,25 +7,27 @@ license = "MIT"
 
 [tool.poetry.dependencies]
 python = "^3.9"
-parallel-ssh = "^2.6.0"
 grpcio = "^1.41.0"
 SQLAlchemy = "^1.4.25"
 
 [tool.poetry.dev-dependencies]
+# Tools
+grpcio-tools = "^1.41.0"
+mkcommit = "^1.0.3"
+# Drivers
+aiosqlite = "^0.17.0"
+# Code quality
 flake8 = "^3.9.2"
 flake8-bugbear = "^21.9.2"
-mypy = "^0.910"
 black = "^21.9b0"
 pytest = "^6.2.5"
-mkcommit = "^1.0.3"
-grpcio-tools = "^1.41.0"
+pytest-asyncio = "^0.16.0"
+mypy = "^0.910"
 # Type stubs
 mypy-protobuf = "^2.10"
 types-protobuf = "^3.18.0"
 grpc-stubs = "^1.24.7"
 SQLAlchemy = {extras = ["mypy"], version = "^1.4.25"}
-aiosqlite = "^0.17.0"
-pytest-asyncio = "^0.16.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
