--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -30,7 +30,7 @@ jobs:
             ~/.cache/pypoetry/artifacts
           key: ${{ runner.os }}-poetry-${{ hashFiles('poetry.lock') }}
           restore-keys: |
-            ${{ runner.os }}-poetry-
+            ${{ runner.os }}-poetry-${{ hashFiles('poetry.lock') }}
       - name: Install Poetry
         run: python -m pip install --user poetry
       - name: Install dependencies
@@ -66,7 +66,7 @@ jobs:
             ~/.cache/pypoetry/artifacts
           key: ${{ runner.os }}-poetry-${{ hashFiles('poetry.lock') }}
           restore-keys: |
-            ${{ runner.os }}-poetry-
+            ${{ runner.os }}-poetry-${{ hashFiles('poetry.lock') }}
       - name: Install Poetry
         run: python -m pip install --user poetry
       - name: Install dependencies
