--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -2,11 +2,11 @@ name: nodejs
 
 on:
   push:
-    branches: [ main ]
+    branches: [main]
   pull_request:
-    branches: [ main ]
+    branches: [main]
     paths:
-      - 'ui/**'
+      - "ui/**"
 
 jobs:
   format:
@@ -23,7 +23,7 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: 14.x
-          cache: 'npm'
+          cache: "npm"
           cache-dependency-path: ui/package-lock.json
       - name: Install dependencies
         run: npm ci
@@ -55,7 +55,7 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node-version }}
-          cache: 'npm'
+          cache: "npm"
           cache-dependency-path: ui/package-lock.json
       - name: Install dependencies
         run: npm ci
@@ -63,6 +63,4 @@ jobs:
         run: npm run type-check --if-present
       - name: Lint
         run: npm run lint --if-present
-
-
 # vim: set et ts=2 sw=2:
