--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -2,13 +2,13 @@ name: python
 
 on:
   push:
-    branches: [ main ]
+    branches: [main]
   pull_request:
-    branches: [ main ]
+    branches: [main]
     paths:
-      - 'fact/**'
-      - 'test/**'
-      - 'tools/**'
+      - "fact/**"
+      - "test/**"
+      - "tools/**"
 
 jobs:
   format:
@@ -21,16 +21,17 @@ jobs:
       - name: Set up Python 3.9
         uses: actions/setup-python@v2
         with:
-          python-version: 3.9
+          python-version: "3.9"
+        id: setup-python
       - uses: actions/cache@v2
         with:
           path: |
             ~/.cache/pip
-            ~/.cache/pypoetry/cache
             ~/.cache/pypoetry/artifacts
-          key: ${{ runner.os }}-poetry-${{ hashFiles('poetry.lock') }}
+            ~/.cache/pypoetry/virtualenvs
+          key: ${{ runner.os }}-python${{ steps.setup-python.outputs.python-version }}-poetry-${{ hashFiles('poetry.lock') }}
           restore-keys: |
-            ${{ runner.os }}-poetry-${{ hashFiles('poetry.lock') }}
+            ${{ runner.os }}-python${{ steps.setup-python.outputs.python-version }}-poetry-${{ hashFiles('poetry.lock') }}
       - name: Install Poetry
         run: python -m pip install --user poetry
       - name: Install dependencies
@@ -50,7 +51,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.9]
+        python-version: ["3.9"]
 
     steps:
       - uses: actions/checkout@v2
@@ -58,15 +59,16 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python-version }}
+        id: setup-python
       - uses: actions/cache@v2
         with:
           path: |
             ~/.cache/pip
-            ~/.cache/pypoetry/cache
             ~/.cache/pypoetry/artifacts
-          key: ${{ runner.os }}-poetry-${{ hashFiles('poetry.lock') }}
+            ~/.cache/pypoetry/virtualenvs
+          key: ${{ runner.os }}-python${{ steps.setup-python.outputs.python-version }}-poetry-${{ hashFiles('poetry.lock') }}
           restore-keys: |
-            ${{ runner.os }}-poetry-${{ hashFiles('poetry.lock') }}
+            ${{ runner.os }}-python${{ steps.setup-python.outputs.python-version }}-poetry-${{ hashFiles('poetry.lock') }}
       - name: Install Poetry
         run: python -m pip install --user poetry
       - name: Install dependencies
@@ -77,6 +79,4 @@ jobs:
         run: poetry run mypy .
       - name: Test with pytest
         run: poetry run python -m pytest
-
-
 # vim: set et ts=2 sw=2:
