--- a/.dockerignore
+++ b/.dockerignore
@@ -1,15 +1,15 @@
 # python: compiler cache
-__pycache__
+**/__pycache__
 
 # python: testing and checking
-.mypy_cache
-.pytest_cache
+**/.mypy_cache
+**/.pytest_cache
 
 # python: build artefacts
 /dist
 
 # nodejs: dependencies
-node_modules
+**/node_modules
 
 # nodejs: testing
 /ui/coverage
@@ -25,22 +25,22 @@ node_modules
 /ui/*.tsbuildinfo
 
 # nodejs: debug
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+**/npm-debug.log*
+**/yarn-debug.log*
+**/yarn-error.log*
 
 # nodejs: vercel
-.vercel
+**/.vercel
 
 # nodejs: local env files
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+**/.env.local
+**/.env.development.local
+**/.env.test.local
+**/.env.production.local
 
 # grpcwebproxy
 /fact/grpcwebproxy/grpcwebproxy*
 
 # misc
-.DS_Store
-*.pem
+**/.DS_Store
+**/*.pem
