--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -30,17 +30,17 @@ jobs:
             type=ref,event=pr
             type=semver,pattern={{version}}
             type=semver,pattern={{major}}.{{minor}}
-        id: meta
+        id: meta-ui
       - uses: docker/build-push-action@v2
         with:
           context: .
           file: Dockerfile.ui
           target: production
           push: true
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
+          tags: ${{ steps.meta-ui.outputs.tags }}
+          labels: ${{ steps.meta-ui.outputs.labels }}
 
-  controller:
+  controller-worker:
     runs-on: ubuntu-latest
 
     steps:
@@ -60,28 +60,15 @@ jobs:
             type=ref,event=pr
             type=semver,pattern={{version}}
             type=semver,pattern={{major}}.{{minor}}
-        id: meta
+        id: meta-controller
       - uses: docker/build-push-action@v2
         with:
           context: .
           file: Dockerfile
           target: controller
           push: true
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
-
-  worker:
-    runs-on: ubuntu-latest
-
-    steps:
-      - uses: actions/checkout@v2
-        with:
-          ref: ${{ github.head_ref }}
-      - uses: docker/login-action@v1
-        with:
-          registry: ${{ env.REGISTRY }}
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          tags: ${{ steps.meta-controller.outputs.tags }}
+          labels: ${{ steps.meta-controller.outputs.labels }}
       - uses: docker/metadata-action@v3
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_PREFIX }}-worker
@@ -90,15 +77,15 @@ jobs:
             type=ref,event=pr
             type=semver,pattern={{version}}
             type=semver,pattern={{major}}.{{minor}}
-        id: meta
+        id: meta-worker
       - uses: docker/build-push-action@v2
         with:
           context: .
           file: Dockerfile
           target: worker
           push: true
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
+          tags: ${{ steps.meta-worker.outputs.tags }}
+          labels: ${{ steps.meta-worker.outputs.labels }}
 
   grpcwebproxy:
     runs-on: ubuntu-latest
@@ -120,13 +107,13 @@ jobs:
             type=ref,event=pr
             type=semver,pattern={{version}}
             type=semver,pattern={{major}}.{{minor}}
-        id: meta
+        id: meta-grpcwebproxy
       - uses: docker/build-push-action@v2
         with:
           context: .
           file: Dockerfile.grpcwebproxy
           target: production
           push: true
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
+          tags: ${{ steps.meta-grpcwebproxy.outputs.tags }}
+          labels: ${{ steps.meta-grpcwebproxy.outputs.labels }}
 # vim: set et ts=2 sw=2:
