--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -2,8 +2,9 @@ name: release
 
 on:
   push:
-    branches: [main]
     tags: ["v*"]
+  #  branches: [main]
+  workflow_dispatch:
 
 env:
   REGISTRY: ghcr.io
