fix: Ensure container has permissions for `losetup`

--- a/docker-compose.dev.yaml
+++ b/docker-compose.dev.yaml
@@ -37,10 +37,7 @@ services:
     volumes:
       - .:/app
       - worker-data:/var/lib/fact
-    cap_add:
-      - SYS_ADMIN
-    devices:
-      - /dev/loop-control:/dev/loop-control
+    privileged: true
   grpcwebproxy:
     build:
       context: .
