--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -15,9 +15,7 @@ services:
       - fact
     volumes:
       - worker-data:/var/lib/fact
-    cap_add: SYS_ADMIN
-    devices:
-      - /dev/loop-control:/dev/loop-control
+    privileged: true
   grpcwebproxy:
     image: ghcr.io/unicornunicode/fact-grpcwebproxy:main
     command: ["--backend_addr=controller:5123", "--server_http_debug_port=5124"]
