--- a/docker-compose.dev.yaml
+++ b/docker-compose.dev.yaml
@@ -74,6 +74,12 @@ services:
     environment:
       - discovery.type=single-node
       - xpack.security.enabled=false
+      - bootstrap.memory_lock=true
+      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
+    ulimits:
+      memlock:
+        soft: -1
+        hard: -1
     networks:
       - fact
     ports:
