--- a/docker-compose.dev.yaml
+++ b/docker-compose.dev.yaml
@@ -4,7 +4,7 @@ services:
   controller:
     build:
       context: .
-      dockerfile: Dockerfile
+      dockerfile: build/Dockerfile
       target: dependencies
     command:
       - python
@@ -24,7 +24,7 @@ services:
   worker:
     build:
       context: .
-      dockerfile: Dockerfile
+      dockerfile: build/Dockerfile
       target: dependencies
     command:
       - python
@@ -43,7 +43,7 @@ services:
   grpcwebproxy:
     build:
       context: .
-      dockerfile: Dockerfile.grpcwebproxy
+      dockerfile: build/Dockerfile.grpcwebproxy
       target: production
     command: ["--backend_addr=controller:5123", "--server_http_debug_port=5124"]
     networks:
@@ -53,7 +53,7 @@ services:
   ui:
     build:
       context: .
-      dockerfile: Dockerfile.ui
+      dockerfile: build/Dockerfile.ui
       target: development-dependencies
     command: ["npm", "run", "dev"]
     environment:
