--- a/ui/package.json
+++ b/ui/package.json
@@ -14,25 +14,25 @@
     "@improbable-eng/grpc-web": "^0.14.1",
     "@improbable-eng/grpc-web-node-http-transport": "^0.14.1",
     "clsx": "^1.1.1",
-    "filesize": "^8.0.5",
+    "filesize": "^8.0.7",
     "next": "12.0.9",
     "react": "17.0.2",
-    "react-bootstrap": "^2.0.0-rc.0",
+    "react-bootstrap": "^2.1.2",
     "react-dom": "17.0.2",
-    "react-hook-form": "^7.17.5",
-    "ts-proto": "^1.83.1",
+    "react-hook-form": "^7.27.0",
+    "ts-proto": "^1.105.1",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
-    "@types/react": "17.0.26",
-    "@types/uuid": "^8.3.1",
+    "@types/react": "^17.0.39",
+    "@types/uuid": "^8.3.4",
     "bootstrap": "^5.1.3",
-    "eslint-config-next": "12.0.0",
-    "eslint-config-xo-react": "^0.25.0",
-    "prettier": "^2.4.1",
-    "sass": "^1.43.2",
-    "typescript": "4.4.3",
-    "xo": "^0.45.0"
+    "eslint-config-next": "^12.0.10",
+    "eslint-config-xo-react": "^0.26.0",
+    "prettier": "^2.5.1",
+    "sass": "^1.49.7",
+    "typescript": "^4.5.5",
+    "xo": "^0.47.0"
   },
   "xo": {
     "ignores": [
@@ -46,8 +46,10 @@
     ],
     "rules": {
       "react/react-in-jsx-scope": "off",
+      "react/jsx-uses-react": "off",
       "unicorn/prefer-node-protocol": "off",
-      "new-cap": "off"
+      "new-cap": "off",
+      "import/extensions": "warn"
     },
     "overrides": [
       {
